# AISlopDetector

./: .dockerignore  .env.example  .gitignore  dvc.yaml  pyproject.toml
.github/workflows/: build-push.yml  ci.yml  deploy.yml
configs/: training.yaml
dags/: common.py  data_collection_dag.py  monitoring_dag.py  review_feedback_dag.py  training_dag.py
docker/: Dockerfile  docker-compose.yml
docker/monitoring/: prometheus.yml
docker/scripts/: entrypoint.sh
infrastructure/kubernetes/: namespaces.yaml
infrastructure/kubernetes/airflow/: deployment.yaml
infrastructure/kubernetes/azureml/: job.yaml
infrastructure/kubernetes/kserve/: inferenceservice.yaml
infrastructure/kubernetes/label-studio/: deployment.yaml
infrastructure/kubernetes/mlflow/: deployment.yaml
infrastructure/kubernetes/monitoring/: prometheus.yaml
infrastructure/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
notebooks/: 00_explore.ipynb  01_train_on_kaggle.ipynb  02_train_genimage.ipynb
scripts/: submit_training.py
src/: __init__.py
src/evaluation/: __init__.py  challenger.py
src/features/feature_repo/: __init__.py  definitions.py  feature_store.yaml
src/models/: azureml_train.py  classifier.py  evaluate.py  train.py
src/monitoring/: __init__.py  drift.py
src/serving/: __init__.py  model_server.py
tests/: test_active_learning.py  test_challenger.py  test_cifake_dataset.py  test_drift.py  test_serving.py
