[project]
name = "aislop-detector"
version = "0.1.0"
description = "Self-healing AI-generated image detector with drift monitoring"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "timm>=0.9",
    "mlflow>=2.0",
    "dvc>=3.0",
    "feast>=0.35",
    "open-clip-torch>=2.24",
    "evidently>=0.4",
    "pillow>=10.0",
    "pyarrow>=14.0",
    "pyyaml>=6.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "tqdm>=4.65",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
